--- a/mysite3/src/main/resources/messages/messages_ko.properties
+++ b/mysite3/src/main/resources/messages/messages_ko.properties
@@ -2,3 +2,9 @@ NotEmpty.userVo.name = \uC774\uB984\uC740 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9
 Length.userVo.name=\uC774\uB984\uC740 2~8 \uC790\uB85C\uC124\uC815\uD574\uC8FC\uC138\uC694.
 NotEmpty.userVo.email = \uC774\uBA54\uC77C\uC740 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
 Email.userVo.email = \uC785\uB825 \uD615\uC2F1\uC5D0 \uB9DE\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+NotEmpty.userVo.password = \uD328\uC2A4\uC6CC\uB4DC\uB294 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+NotEmpty.userVo.gender = \uC131\uBCC4\uC740 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+
+NotEmpty.GuestbookVo.name = \uC774\uB984\uC740 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+NotEmpty.GuestbookVo.password = \uD328\uC2A4\uC6CC\uB4DC\uB294 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+NotEmpty.GuestbookVo.contents = \uAC8C\uC2DC\uAE00\uC740 \uD544\uC218 \uC785\uB825 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
